<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cat_server">

        <EditTextPreference
            android:key="server_base"
            android:title="@string/pref_server_base"
            android:defaultValue="http://127.0.0.1:8765"
            android:summary="%s"
            android:dialogTitle="@string/pref_server_base" />

        <EditTextPreference
            android:key="server_timeout"
            android:title="@string/pref_server_timeout"
            android:defaultValue="8000"
            android:inputType="number"
            android:summary="%s" />

        <SwitchPreferenceCompat
            android:key="use_local_only"
            android:title="@string/pref_use_local_only"
            android:defaultValue="true"
            android:summary="@string/pref_use_local_only_sum" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_capture">

        <SwitchPreferenceCompat
            android:key="watch_qq"
            android:title="@string/pref_watch_qq"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="watch_wechat"
            android:title="@string/pref_watch_wechat"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="max_messages"
            android:title="@string/pref_max_messages"
            android:defaultValue="12"
            android:inputType="number"
            android:summary="%s" />

        <SwitchPreferenceCompat
            android:key="auto_trigger"
            android:title="@string/pref_auto_trigger"
            android:defaultValue="true"
            android:summary="@string/pref_auto_trigger_sum" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_float">

        <SwitchPreferenceCompat
            android:key="float_ball_enabled"
            android:title="@string/pref_float_ball"
            android:defaultValue="true" />

        <SeekBarPreference
            android:key="float_ball_alpha"
            android:title="@string/pref_float_alpha"
            android:defaultValue="90"
            android:max="100"
            android:min="20" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_log">

        <Preference
            android:key="log_view"
            android:title="@string/pref_log_view"
            android:summary="@string/pref_log_view_sum" />

    </PreferenceCategory>

</PreferenceScreen>
